fix: api docs
