# docs/swagger.json
@@ -17,14 +17,14 @@
     },
     "basePath": "/gateway/v1",
     "paths": {
-        "/gateway/v1/discovery/discover": {
+        "/discovery/discover": {
             "get": {
                 "description": "获取推送服务器 IP",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]discover"
+                    "discover"
                 ],
                 "summary": "获取推送服务器",
                 "parameters": [
@@ -52,7 +52,7 @@
                 }
             }
         },
-        "/gateway/v1/group/create": {
+        "/group/create": {
             "post": {
                 "description": "创建群组",
                 "consumes": [
@@ -62,7 +62,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]群组"
+                    "群组"
                 ],
                 "summary": "创建群组",
                 "parameters": [
@@ -99,7 +99,7 @@
                 }
             }
         },
-        "/gateway/v1/group/delete": {
+        "/group/delete": {
             "post": {
                 "description": "删除群组",
                 "consumes": [
@@ -109,7 +109,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]群组"
+                    "群组"
                 ],
                 "summary": "删除群组",
                 "parameters": [
@@ -146,7 +146,7 @@
                 }
             }
         },
-        "/gateway/v1/group/get": {
+        "/group/get": {
             "get": {
                 "description": "获取群组信息",
                 "consumes": [
@@ -156,7 +156,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]群组"
+                    "群组"
                 ],
                 "summary": "获取群组信息",
                 "parameters": [
@@ -197,7 +197,7 @@
                 }
             }
         },
-        "/gateway/v1/group/join": {
+        "/group/join": {
             "post": {
                 "description": "加入群组",
                 "consumes": [
@@ -207,7 +207,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]群组"
+                    "群组"
                 ],
                 "summary": "加入群组",
                 "parameters": [
@@ -244,7 +244,7 @@
                 }
             }
         },
-        "/gateway/v1/group/leave": {
+        "/group/leave": {
             "post": {
                 "description": "退出群组",
                 "consumes": [
@@ -254,7 +254,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]群组"
+                    "群组"
                 ],
                 "summary": "退出群组",
                 "parameters": [
@@ -291,7 +291,7 @@
                 }
             }
         },
-        "/gateway/v1/group/list": {
+        "/group/list": {
             "get": {
                 "description": "获取群组列表",
                 "consumes": [
@@ -301,7 +301,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]群组"
+                    "群组"
                 ],
                 "summary": "获取群组列表",
                 "parameters": [
@@ -363,7 +363,7 @@
                 }
             }
         },
-        "/gateway/v1/group/update": {
+        "/group/update": {
             "post": {
                 "description": "更新群组",
                 "consumes": [
@@ -373,7 +373,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]群组"
+                    "群组"
                 ],
                 "summary": "更新群组",
                 "parameters": [
@@ -410,7 +410,7 @@
                 }
             }
         },
-        "/gateway/v1/message/broadcast": {
+        "/message/broadcast": {
             "post": {
                 "description": "发送广播消息",
                 "consumes": [
@@ -420,7 +420,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]message"
+                    "message"
                 ],
                 "summary": "发送广播消息",
                 "parameters": [
@@ -457,7 +457,7 @@
                 }
             }
         },
-        "/gateway/v1/message/send_msg": {
+        "/message/send_msg": {
             "post": {
                 "description": "发送单聊消息",
                 "consumes": [
@@ -467,7 +467,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]message"
+                    "message"
                 ],
                 "summary": "发送单聊消息",
                 "parameters": [
@@ -504,7 +504,7 @@
                 }
             }
         },
-        "/gateway/v1/offline_message/query": {
+        "/offline_message/query": {
             "post": {
                 "description": "查询离线消息",
                 "consumes": [
@@ -514,7 +514,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]offline_message"
+                    "offline_message"
                 ],
                 "summary": "查询离线消息",
                 "parameters": [
@@ -544,7 +544,7 @@
                 }
             }
         },
-        "/gateway/v1/user/friend/accept": {
+        "/user/friend/accept": {
             "post": {
                 "description": "接受好友请求",
                 "consumes": [
@@ -554,7 +554,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]好友"
+                    "好友"
                 ],
                 "summary": "接受好友请求",
                 "parameters": [
@@ -591,7 +591,7 @@
                 }
             }
         },
-        "/gateway/v1/user/friend/add": {
+        "/user/friend/add": {
             "post": {
                 "description": "添加好友",
                 "consumes": [
@@ -601,7 +601,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]好友"
+                    "好友"
                 ],
                 "summary": "添加好友",
                 "parameters": [
@@ -638,7 +638,7 @@
                 }
             }
         },
-        "/gateway/v1/user/friend/block": {
+        "/user/friend/block": {
             "post": {
                 "description": "屏蔽好友",
                 "consumes": [
@@ -648,7 +648,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]好友"
+                    "好友"
                 ],
                 "summary": "屏蔽好友",
                 "parameters": [
@@ -685,7 +685,7 @@
                 }
             }
         },
-        "/gateway/v1/user/friend/delete": {
+        "/user/friend/delete": {
             "post": {
                 "description": "删除好友",
                 "consumes": [
@@ -695,7 +695,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]好友"
+                    "好友"
                 ],
                 "summary": "删除好友",
                 "parameters": [
@@ -732,14 +732,14 @@
                 }
             }
         },
-        "/gateway/v1/user/friend/list": {
+        "/user/friend/list": {
             "get": {
                 "description": "获取好友列表",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]好友"
+                    "好友"
                 ],
                 "summary": "获取好友列表",
                 "parameters": [
@@ -782,7 +782,7 @@
                 }
             }
         },
-        "/gateway/v1/user/friend/reject": {
+        "/user/friend/reject": {
             "post": {
                 "description": "拒绝好友请求",
                 "consumes": [
@@ -792,7 +792,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]好友"
+                    "好友"
                 ],
                 "summary": "拒绝好友请求",
                 "parameters": [
@@ -829,14 +829,14 @@
                 }
             }
         },
-        "/gateway/v1/user/friend/request/list": {
+        "/user/friend/request/list": {
             "get": {
                 "description": "获取好友请求列表",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]好友"
+                    "好友"
                 ],
                 "summary": "获取好友请求列表",
                 "parameters": [
@@ -864,7 +864,7 @@
                 }
             }
         },
-        "/gateway/v1/user/friend/unblock": {
+        "/user/friend/unblock": {
             "post": {
                 "description": "取消屏蔽好友",
                 "consumes": [
@@ -874,7 +874,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]好友"
+                    "好友"
                 ],
                 "summary": "取消屏蔽好友",
                 "parameters": [
@@ -911,7 +911,7 @@
                 }
             }
         },
-        "/gateway/v1/user/login": {
+        "/user/login": {
             "post": {
                 "description": "用户登录",
                 "consumes": [
@@ -921,7 +921,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]用户"
+                    "用户"
                 ],
                 "summary": "登录",
                 "parameters": [
@@ -963,7 +963,7 @@
                 }
             }
         },
-        "/gateway/v1/user/query": {
+        "/user/query": {
             "post": {
                 "description": "查询用户信息",
                 "consumes": [
@@ -973,7 +973,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]用户"
+                    "用户"
                 ],
                 "summary": "查询用户信息",
                 "parameters": [
@@ -997,7 +997,7 @@
                 }
             }
         },
-        "/gateway/v1/user/register": {
+        "/user/register": {
             "post": {
                 "description": "用户注册",
                 "consumes": [
@@ -1007,7 +1007,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]用户"
+                    "用户"
                 ],
                 "summary": "注册",
                 "parameters": [
@@ -1031,7 +1031,7 @@
                 }
             }
         },
-        "/gateway/v1/user/update": {
+        "/user/update": {
             "post": {
                 "description": "更新用户信息",
                 "consumes": [
@@ -1041,7 +1041,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "[gateway]用户"
+                    "用户"
                 ],
                 "summary": "更新用户信息",
                 "parameters": [
