# internal/router/v1/friend_router.go
@@ -40,12 +40,12 @@ func (r *FriendRouter) Load(g *gin.RouterGroup) {
 
 // @Summary 获取好友列表
 // @Description 获取好友列表
-// @Tags [gateway]好友
+// @Tags 好友
 // @Produce json
 // @Param Authorization header string true "token"
 // @Success 200 {object} response.Response{data=[]friendpb.Friend} "Success"
 // @Failure 400 {object} response.Response{} "err"
-// @Router /gateway/v1/user/friend/list [get]
+// @Router /user/friend/list [get]
 func (r *FriendRouter) listRelation(c *gin.Context) {
 	// no need to check uid
 	uid := c.GetString("uid")
@@ -64,12 +64,12 @@ func (r *FriendRouter) listRelation(c *gin.Context) {
 
 // @Summary 获取好友请求列表
 // @Description 获取好友请求列表
-// @Tags [gateway]好友
+// @Tags 好友
 // @Produce json
 // @Param Authorization header string true "token"
 // @Success 200 {object} response.Response{} "Success"
 // @Failure 400 {object} response.Response{} "err"
-// @Router /gateway/v1/user/friend/request/list [get]
+// @Router /user/friend/request/list [get]
 func (r *FriendRouter) listFriendRequest(c *gin.Context) {
 	uid := c.GetString("uid")
 	req := &friendpb.QueryFriendRequestListRequest{
@@ -95,14 +95,14 @@ func (r *FriendRouter) listFriendRequest(c *gin.Context) {
 // query user info before add friend
 // @Summary 添加好友
 // @Description 添加好友
-// @Tags [gateway]好友
+// @Tags 好友
 // @Accept json
 // @Produce json
 // @Param Authorization header string true "token"
 // @Param body body friendpb.AddFriendRequest true "body"
 // @Success 200 {object} friendpb.AddFriendResult
 // @Failure 400 {object} responsepb.BaseResponse "err"
-// @Router /gateway/v1/user/friend/add [post]
+// @Router /user/friend/add [post]
 func (r *FriendRouter) addFriend(c *gin.Context) {
 	req := &friendpb.AddFriendRequest{}
 	if err := c.ShouldBindWith(req, request.NonValidatePbJSONBinding); err != nil {
@@ -127,14 +127,14 @@ func (r *FriendRouter) addFriend(c *gin.Context) {
 
 // @Summary 删除好友
 // @Description 删除好友
-// @Tags [gateway]好友
+// @Tags 好友
 // @Accept json
 // @Produce json
 // @Param Authorization header string true "token"
 // @Param body body friendpb.BaseFriendRequest true "body"
 // @Success 200 {object} responsepb.BaseResponse "Success"
 // @Failure 400 {object} responsepb.BaseResponse "err"
-// @Router /gateway/v1/user/friend/delete [post]
+// @Router /user/friend/delete [post]
 func (r *FriendRouter) deleteFriend(c *gin.Context) {
 	req := &friendpb.BaseFriendRequest{}
 	if err := c.ShouldBindWith(req, request.PbJSONBinding{}); err != nil {
@@ -153,14 +153,14 @@ func (r *FriendRouter) deleteFriend(c *gin.Context) {
 
 // @Summary 接受好友请求
 // @Description 接受好友请求
-// @Tags [gateway]好友
+// @Tags 好友
 // @Accept json
 // @Produce json
 // @Param Authorization header string true "token"
 // @Param body body friendpb.ConfirmFriendRequestReq true "body"
 // @Success 200 {object} responsepb.BaseResponse "Success"
 // @Failure 400 {object} responsepb.BaseResponse "err"
-// @Router /gateway/v1/user/friend/accept [post]
+// @Router /user/friend/accept [post]
 func (r *FriendRouter) acceptFriend(c *gin.Context) {
 	req := &friendpb.ConfirmFriendRequestReq{}
 	if err := c.ShouldBindWith(req, request.NonValidatePbJSONBinding); err != nil {
@@ -181,14 +181,14 @@ func (r *FriendRouter) acceptFriend(c *gin.Context) {
 
 // @Summary 拒绝好友请求
 // @Description 拒绝好友请求
-// @Tags [gateway]好友
+// @Tags 好友
 // @Accept json
 // @Produce json
 // @Param Authorization header string true "token"
 // @Param body body friendpb.ConfirmFriendRequestReq true "body"
 // @Success 200 {object} responsepb.BaseResponse "Success"
 // @Failure 400 {object} responsepb.BaseResponse "err"
-// @Router /gateway/v1/user/friend/reject [post]
+// @Router /user/friend/reject [post]
 func (r *FriendRouter) rejectFriend(c *gin.Context) {
 	req := &friendpb.ConfirmFriendRequestReq{}
 	if err := c.ShouldBindWith(req, request.NonValidatePbJSONBinding); err != nil {
@@ -209,14 +209,14 @@ func (r *FriendRouter) rejectFriend(c *gin.Context) {
 
 // @Summary 屏蔽好友
 // @Description 屏蔽好友
-// @Tags [gateway]好友
+// @Tags 好友
 // @Accept json
 // @Produce json
 // @Param Authorization header string true "token"
 // @Param body body friendpb.BaseFriendRequest true "body"
 // @Success 200 {object} responsepb.BaseResponse "Success"
 // @Failure 400 {object} responsepb.BaseResponse "err"
-// @Router /gateway/v1/user/friend/block [post]
+// @Router /user/friend/block [post]
 func (r *FriendRouter) blockFriend(c *gin.Context) {
 	req := &friendpb.BaseFriendRequest{}
 	if err := c.ShouldBindWith(req, request.PbJSONBinding{}); err != nil {
@@ -235,14 +235,14 @@ func (r *FriendRouter) blockFriend(c *gin.Context) {
 
 // @Summary 取消屏蔽好友
 // @Description 取消屏蔽好友
-// @Tags [gateway]好友
+// @Tags 好友
 // @Accept json
 // @Produce json
 // @Param Authorization header string true "token"
 // @Param body body friendpb.BaseFriendRequest true "body"
 // @Success 200 {object} responsepb.BaseResponse "Success"
 // @Failure 400 {object} responsepb.BaseResponse "err"
-// @Router /gateway/v1/user/friend/unblock [post]
+// @Router /user/friend/unblock [post]
 func (r *FriendRouter) unblockFriend(c *gin.Context) {
 	req := &friendpb.BaseFriendRequest{}
 	if err := c.ShouldBindWith(req, request.PbJSONBinding{}); err != nil {
